Roundcube Webmail ContextMenu
=============================

Version 3.0 (2019-10-27, rc-1.4)
=================================================
 * Rework Contextmenu settings object
 * Rework core Contextmenu JS functions
    * rcm_listmenu_init() -> rcmail.contextmenu.init_list()
    * rcm_foldermenu_init()-> rcmail.contextmenu.init_folder()
    * rcm_abookmenu_init()-> rcmail.contextmenu.init_addressbook()
    * rcm_callbackmenu_init()-> return rcmail.contextmenu.init()
    * rcm_show_menu()-> rcmail.contextmenu.show_one()
    * rcm_hide_menu()-> rcmail.contextmenu.hide_all()
    * rcm_check_button_state()-> return rcmail.contextmenu.ui_button_check()
 * Allow skins to set Contextmenu classes
 * Remove IE8 hacks
 * Improve menu element parsing, allow for popup menu functions in skin
 * Add new event submenu_toggle to handle display of hidden menus
 * Disable right click on context menu
 * Depreciate right-arrow class, use sub-button instead
 * Depreciate contextRow class, use context-source instead
 * Depreciate rcmmainmenu class, use rcm-mainmenu instead
 * Depreciate rcmsubmenu and submenu classes, use rcm-submenu instead
 * Depreciate rcm_active class, use rcm-active instead
 * Depreciate rcm_ignore class, use rcm-ignore instead
 * Add new event addmenuitem
 * Add ability to add to core event handlers as well as replace them
 * Improve collapseall/expandall JS functions to better mimic true click
 * Use getselection list event added (req RC e9eb87d, afaaa77, 2f7aaca)
 * Change rcube_context_menu.list_object from Object to String, backwards compatibility added for Contact list but no others
 * Replace overload_commands option with always_enable_commands
 * overload_commands option removed (req RC afaaa77)
 * Add Elastic skin support
 * Add menu-change JS event listener
 * Support new Contacts toolbar with Copy/Move actions (req RC eb0228b)
 * Add menus to Settings screens